--- a/trunk/sgo/web/footer.jspf
+++ b/trunk/sgo/web/footer.jspf
@@ -4,61 +4,40 @@
 			</div>
 		</div>
 
-		
-		<div id="footer">
-			<c:set var="ip" value="<%=request.getRemoteAddr() %>"/>
-			<c:set var="ipParts" value="${fn:split(ip,'.')}" />
-			<input type="hidden" id="ip" name="ip " value ="${ipParts[3]}" />
-
-			Em caso de dúvidas/problemas relacionados à TI envie email para <a href="mailto:suporte@grupoourocred.com.br">suporte@grupoourocred.com.br</a> informando o seguinte número:<b><c:out value="${ipParts[3]}"/></b><br/>
-
-			<!-- 
-			Para dúvidas/problemas relacionados à TI envie email para <a href="mailto:suporte@grupoourocred.com.br">suporte@grupoourocred.com.br</a> 
-			ou então <a href="http://ourocred.zendesk.com/account/dropboxes/20092553" onClick="script: Zenbox.show(); return false;">clique aqui</a><br/>
-			-->
-
-			Grupo Ouro Cred - 2013
-		</div>
-
-		<input type="hidden" id="consultor" name="consultor " value ="${consultorInfo.consultor.nome }" />
-		<input type="hidden" id="tipo" name="tipo " value ="${consultorInfo.consultor.tipo }" />
-		<input type="hidden" id="supervisor" name="supervisor " value ="${consultorInfo.consultor.supervisor }" />
-		<input type="hidden" id="mail" name="mail " value ="${consultorInfo.mail }" />
+		<div id="footer" />
 
 	</div>
 
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery.validate.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery.maskedinput-1.2.2.min.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery.maskMoney.0.2.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery.calendario.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/funcs.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery.history.js"/>"></script>
+	<script type="text/javascript" src="<c:url value="/javascripts/jquery-ui-1.8.13.custom.min.js"/>"></script>
+
+	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
+    <script src="<c:url value="/javascripts/new/jquery.js"/>"></script>    
+
+	<script src="<c:url value="/javascripts/new/bootstrap.js"/>"></script>
+	<script src="<c:url value="/javascripts/new/bootstrap-affix.js"/>"></script>
+	<script src="<c:url value="/javascripts/new/bootstrap-alert.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-button.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-carousel.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-collapse.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-dropdown.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-modal.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-popover.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-scrollspy.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-tab.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-tooltip.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-transition.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/bootstrap-typeahead.js"/>"></script>
+  	<script src="<c:url value="/javascripts/new/html5shiv.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/application.js"/>"></script>
+    <script src="<c:url value="/javascripts/new/holder/holder.js"/>"></script>
+
 </body>
-
-<c:if test="${not empty consultorInfo.consultor || consultorInfo.consultor.tipo != 'C'}">
-	<script type="text/javascript" src="<c:url value="http://assets.zendesk.com/external/zenbox/v2.5/zenbox.js"/>"></script>
-	<style type="text/css" media="screen, projection">
-	  @import url('<c:url value="http://assets.zendesk.com/external/zenbox/v2.5/zenbox.css"/>');
-	</style>
-	<script type="text/javascript">
-
-	var var_consultor = $('#consultor').val();
-	var var_email = $('#mail').val();
-	var var_tipo = $('#tipo').val();
-	var var_desc = "Suporte Máquina : " + $('#ip').val() + "                                      ";
-	var_desc += "Usuário Logado : " + $('#consultor').val() + "                                   ";
-
-	if(var_tipo == 'C')
-		var_desc += "Operação : " + $('#supervisor').val();
-
-	if (typeof(Zenbox) !== "undefined") {
-	    Zenbox.init({
-	      dropboxID:   "20092553",
-	      url:         "https://ourocred.zendesk.com",
-	      tabID:       "Suporte",
-	      tabColor:    "#b2d281",
-	      tabPosition: "Right",
-	      hide_tab: "true",
-	      requester_email: var_email,
-	      requester_name: var_consultor,
-	      request_description: var_desc
-	    });
-	  }
-	</script>
-</c:if>
 
 </html>
