--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -12,67 +12,25 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<!-- Bootstrap -->
+
 		<link href="<c:url value="/css/bootstrap/bootstrap.css"/>" rel="stylesheet" type="text/css" media="screen" />
 		<link href="<c:url value="/css/bootstrap/bootstrap-responsive.css"/>" rel="stylesheet" type="text/css" media="screen" />
-		<!-- Bootstrap -->
-
+		<link href="<c:url value="/css/bootstrap/docs.css"/>" rel="stylesheet" type="text/css" media="screen" />
 		<link href="<c:url value="/css/jquery.calendario.css"/>" rel="stylesheet" type="text/css" media="screen" />
-		<link href="<c:url value="/css/solicitacao_explorer.css"/>" rel="stylesheet" type="text/css" media="screen" />
 		<link href="<c:url value="/css/jquery-ui-1.8.13.custom.css"/>" rel="stylesheet" type="text/css" media="screen" />
-		<link href="<c:url value="/css/ui.dropdownchecklist.themeroller.css"/>" rel="stylesheet" type="text/css" media="screen" />
-
-		
-		
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery-1.6.3.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery.validate.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery.maskedinput-1.2.2.min.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery.maskMoney.0.2.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery.calendario.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/funcs.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery.history.js"/>"></script>
-		
-		<script type="text/javascript" src="<c:url value="/javascripts/jquery-ui-1.8.13.custom.min.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/javascripts/ui.dropdownchecklist.js"/>"></script>
-		
-		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-		
-		<!-- BootStrap -->
-		<script type="text/javascript" src="<c:url value="/javascripts/bootstrap/bootstrap.js"/>"></script>
-		<!-- BootStrap -->
-
 
 		<fmt:setLocale value="pt_br"/>
-	
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$("#zone-bar li em").click(function() {
-			   		var hidden = $(this).parents("li").children("ul").is(":hidden");
-			   		
-					$("#zone-bar>ul>li>ul").hide();        
-				   	$("#zone-bar>ul>li>a").removeClass();
-				   		
-				   	if (hidden) {
-				   		$(this)
-					   		.parents("li").children("ul").toggle()
-					   		.parents("li").children("a").addClass("zoneCur");
-					   	} 
-				   });
-			});
-		</script>
 
 	</head>
 
-<body>
+<body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
 
 	<div id="page-wrap">
 
 		<div id="top-bar">
-			<h2 style="color: #FFFFFF;"><img src="<c:url value="/img/logo.png"/>"  style="border: none;margin-top: 5px;"/></h2>
 			<c:if test="${not empty consultorInfo.consultor}">
 				<div id="right-side" style="float:right;display:inline;margin-top: -45px;">
 					<a href="#" class="first">${consultorInfo.consultor.nome}</a>&ensp;
-					<a href="http://ourocred.zendesk.com/account/dropboxes/20092553" onClick="script: Zenbox.show(); return false;">Suporte</a>&emsp;
 					<a href="<c:url value="/home/logout"/>">Logout</a> 
 				</div>
 			</c:if>
@@ -80,189 +38,7 @@
 
 		<c:if test="${not empty consultorInfo.consultor}">
 			<div id="zone-bar">
-			<ul>	
-				<c:choose>
-					<c:when test="${consultorInfo.consultor.tipo == 'A'}">
-						<!-- Administrativo -->
-						<li><a class="notdrop" href="<c:url value="/banco/cadastro"/>"><span>Cadastro Bancos</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/produto/cadastro"/>"><span>Cadastro Produtos</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/tabela/cadastro"/>"><span>Cadastro Tabelas</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/coeficiente/cadastro"/>"><span>Cadastro Coeficientes</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/hiscon/consulta"/>"><span>Solicitação Hiscon</span></a></li>
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'S'}">
-						<!-- Supervisor -->
-						<li>
-							<a href="#"><span>
-								Consulta Contratos
-								<em class="opener-contratos">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="contratossublist">
-								<li><a href="<c:url value="/controle/home/homevendas"/>">Home</a></li>
-								<li><a href="<c:url value="/controle/home/apoiocomercial"/>">Aguardando Apoio comercial</a></li>
-								<li><a href="<c:url value="/controle/home/qualidade"/>">Aguardando Qualidade</a></li>
-								<li><a href="<c:url value="/controle/home/posvenda"/>">Aguardando PósVenda</a></li>
-								<li><a href="<c:url value="/controle/home/boleto"/>">Aguardando Boleto</a></li>
-								<li><a href="<c:url value="/controle/home/foraplanilha"/>">Contrato Fora Planilha</a></li>
-								<li><a href="<c:url value="/controle/home/conferencia"/>">Em Conferência</a></li>
-								<li><a href="<c:url value="/controle/home/dataPrevRecompra"/>">Enviado DataPrev/Recompra</a></li>
-								<li><a href="<c:url value="/controle/home/pendentes"/>">Pendentes</a></li>
-							</ul>
-							
-						</li>
-						<li><a class="notdrop" href="<c:url value="/controle/coeficientes"/>"><span>Lista de Coeficientes</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/consultor/cadastro"/>"><span>Cadastro Consultor</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/cliente/cadastro"/>"><span>Incluir Cliente</span></a></li>
-						<li><a href="#"><span>
-								Solicitação Hiscon
-								<em class="opener-hiscon">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="hisconsublist">
-								<li><a href="<c:url value="/hiscon/cadastro"/>">Cadastro Hiscon</a></li>
-						   		 <li><a href="<c:url value="/hiscon/consulta"/>">Consulta</a></li>
-							</ul>
-						</li>	
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'C'}">
-						<!-- Consultor -->
-						<li><a class="notdrop" href="<c:url value="/controle/home/homevendas"/>"><span>Formulários&nbsp;</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/controle/coeficientes"/>"><span>Lista de Coeficientes</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/cliente/cadastro"/>"><span>Incluir Cliente</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/formulario/formulario"/>"><span>Preencher Formulário</span></a></li>
-						<li>
-							<a href="#"><span>
-								Solicitação Hiscon
-								<em class="opener-hiscon">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="hisconsublist">
-								<li><a href="<c:url value="/hiscon/cadastro"/>">Cadastro Hiscon</a></li>
-								<li><a href="<c:url value="/hiscon/consulta"/>">Consulta</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#" class="drop"><span>Scripts<em class="opener-script"><img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" /></em></span></a>
-							<ul class="scriptsublist"><li><a href="<c:url value="/script/1"/>">Script de Vendas</a></li></ul>
-						</li>
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'P'}">
-						<!-- Pós Venda -->
-						<li>
-							<a href="#"><span>
-								Consulta Contratos
-								<em class="opener-contratos">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="contratossublist">
-								<li><a href="<c:url value="/controle/home/homeposvenda"/>">Home</a></li>
-								<li><a href="<c:url value="/controle/home/apoiocomercial"/>">Aguardando Apoio comercial</a></li>
-								<li><a href="<c:url value="/controle/home/qualidade"/>">Aguardando Qualidade</a></li>
-								<li><a href="<c:url value="/controle/home/posvenda"/>">Aguardando PósVenda</a></li>
-								<li><a href="<c:url value="/controle/home/boleto"/>">Aguardando Boleto</a></li>
-								<li><a href="<c:url value="/controle/home/conferencia"/>">Em Conferência</a></li>
-								<li><a href="<c:url value="/controle/home/dataPrevRecompra"/>">Enviado DataPrev/Recompra</a></li>
-								<li><a href="<c:url value="/controle/home/pendentes"/>">Pendentes</a></li>
-							</ul>
-						</li>
-						<li><a class="notdrop" href="<c:url value="/hiscon/consulta"/>"><span>Consulta Hiscons</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/controle/coeficientes"/>"><span>Lista de Coeficientes</span></a></li>
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'Q'}">
-						<!-- Qualidade -->
-						<li>
-							<a href="#"><span>
-								Consulta Contratos
-								<em class="opener-contratos">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="contratossublist">
-								<li><a href="<c:url value="/controle/home/homecontrole"/>">Home</a></li>
-								<li><a href="<c:url value="/controle/home/apoiocomercial"/>">Aguardando Apoio comercial</a></li>
-								<li><a href="<c:url value="/controle/home/qualidade"/>">Aguardando Qualidade</a></li>
-								<li><a href="<c:url value="/controle/home/posvenda"/>">Aguardando PósVenda</a></li>
-								<li><a href="<c:url value="/controle/home/boleto"/>">Aguardando Boleto</a></li>
-								<li><a href="<c:url value="/controle/home/foraplanilha"/>">Contrato Fora Planilha</a></li>
-								<li><a href="<c:url value="/controle/home/conferencia"/>">Em Conferência</a></li>
-								<li><a href="<c:url value="/controle/home/dataPrevRecompra"/>">Enviado DataPrev/Recompra</a></li>
-								<li><a href="<c:url value="/controle/home/pendentes"/>">Pendentes</a></li>
-							</ul>
-							
-						</li>
-						<li><a class="notdrop" href="<c:url value="/hiscon/consulta"/>"><span>Consulta Hiscons</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/controle/coeficientes"/>"><span>Lista de Coeficientes</span></a></li>
-						<li>
-							<a href="#" class="drop"><span>Scripts<em class="opener-script"><img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" /></em></span></a>
-							<ul class="scriptsublist"><li><a href="<c:url value="/script/1"/>">Script de Vendas</a></li></ul>
-						</li>
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'L'}">
-						<!-- Logística -->
-						<li><a href="<c:url value="/logistica/mapa"/>"><span>Roteiros</span></a></li>
-						<li><a href="<c:url value="/controle/home/homelogistica"/>"><span>Consulta Contratos</span></a></li>
-					</c:when>
-					<c:when test="${consultorInfo.consultor.tipo == 'ADM'}">
-						<!-- ADM -->
-						<li>
-							<a href="#"><span>
-								Consulta Contratos
-								<em class="opener-contratos">
-									<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-								</em>
-							</span></a>
-							<ul class="contratossublist">
-								<li><a href="<c:url value="/controle/home/homeadm"/>">Home</a></li>
-								<li><a href="<c:url value="/controle/home/agendamento"/>">Aguardando Agendamento</a></li>
-								<li><a href="<c:url value="/controle/home/digitacao"/>">Aguardando Digitação</a></li>
-								<li><a href="<c:url value="/controle/home/quitacao"/>">Aguardando Quitação</a></li>
-								<li><a href="<c:url value="/controle/home/analise"/>">Em Análise</a></li>
-								<li><a href="<c:url value="/controle/home/conferencia"/>">Em Conferência</a></li>
-							</ul>
-						</li>
-						<li><a class="notdrop" href="<c:url value="/hiscon/consulta"/>"><span>Consulta Hiscons</span></a></li>
-						<li><a class="notdrop" href="<c:url value="/controle/coeficientes"/>"><span>Lista de Coeficientes</span></a></li>
-					</c:when>
-				</c:choose>
-				<li>
-					<a href="#" class="drop"><span>
-						Procedimentos Bancos
-						<em class="opener-script">
-							<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-						</em>
-					</span></a>
-					<ul class="procedimentosublist">
-						<li><a href="<c:url value="/script/2"/>">Quitador</a></li>
-						<li><a href="<c:url value="/script/3"/>">Operação</a></li>
-						<li><a href="<c:url value="/script/4"/>">Apoio Comercial</a></li>
-						<li><a href="<c:url value="/script/5"/>">Oper./Apoio Comercial</a></li>
-						<li><a href="<c:url value="/script/6"/>">Bancos Refin</a></li>
-						<li><a href="<c:url value="/script/7"/>">Bancos sob Análise</a></li>
-						<li><a href="<c:url value="/script/8"/>">Bancos Suspensos</a></li>
-						<li><a href="<c:url value="/script/9"/>">Carta Quitação</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#" class="drop"><span>
-						Tabelas
-						<em class="opener-script">
-							<img src="<c:url value="/img/zonebar-downarrow.png"/>" alt="dropdown" />
-						</em>
-					</span></a>
-					<ul class="procedimentosublist">
-						<li><a href="<c:url value="/script/10"/>">Tabelas De Desconto</a></li>
-						<li><a href="<c:url value="/script/11"/>">Políticas de Banco</a></li>
-						<li><a href="<c:url value="/script/12"/>">Coeficientes</a></li>
-					</ul>
-				</li>
-				<li><a class="notdrop" href="<c:url value="/script/13"/>"><span>Descrição Status PN</span></a></li>
-				<li><a class="notdrop" href="<c:url value="/script/14"/>"><span>Novas Idéias</span></a></li>
-				</ul>
+
 			</div>
 		</c:if>
 
@@ -291,4 +67,3 @@
 		
 		<div id="main-content">
 			<div id="feature-content">
-		
