--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -51,6 +51,7 @@
 	                        <li role="presentation"><a role="menuitem" tabindex="-1" href="<c:url value="/parceironegocio/cadastro"/>">Parceiros Negócio</a></li>
 							<li role="presentation"><a role="menuitem" tabindex="-1" href="<c:url value="/banco/cadastro"/>">Bancos</a></li>
 	                        <li role="presentation"><a role="menuitem" tabindex="-1" href="<c:url value="/produto/cadastro"/>">Produtos</a></li>
+	                        <li role="presentation"><a role="menuitem" tabindex="-1" href="<c:url value="/tabela/cadastro"/>">Tabelas</a></li>
 	                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
 	                      </ul>
 	                    </li>
