--- a/sgo/web/css/bootstrap/bootstrap.css
+++ b/sgo/web/css/bootstrap/bootstrap.css
@@ -1098,8 +1098,8 @@ input[type="color"],
   height: 15px; /*sgo - alterado*/ /*original - height: 15px;*/
   padding: 4px 6px;
   margin-bottom: 10px;
-  font-size: 14px;
-  line-height: 15px; /*sgo - alterado*/ /*original - line-height: 15px;*/
+  font-size: 12px; /*sgo - alterado*/ /*original - font-size: 15px;*/
+  line-height: 15px; /*sgo - alterado*/ /*original - line-height: 20px;*/
   color: #555555;
   vertical-align: middle;
   -webkit-border-radius: 4px;
@@ -1191,7 +1191,7 @@ input[type="checkbox"] {
 
 select,
 input[type="file"] {
-  height: 30px;
+  height: 25px;
   /* In IE7, the height of the select element cannot be changed by height, only font-size */
 
   *margin-top: 4px;
@@ -1782,6 +1782,7 @@ select:focus:invalid:focus {
 .input-append .btn,
 .input-append .btn-group {
   margin-left: -1px;
+  line-height: 15px /*sgo-add*/
 }
 
 .input-append .add-on:last-child,
@@ -3198,8 +3199,8 @@ button.close {
   padding: 4px 12px;
   margin-bottom: 0;
   *margin-left: .3em;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 12px;
+  line-height: 15px;
   color: #333333;
   text-align: center;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
