--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -95,6 +95,18 @@
 						<li><a href="<c:url value="/perfil/cadastro"/>">Perfil</a></li>
 					</ul>
 				</li>
+				
+				<li class="submenu">
+
+					<a href="#"><i class="icon icon-pencil"></i> <span>Administrativo</span> <span class="label">3</span></a>
+
+					<ul class="cadastro">
+						<li><a href="<c:url value="/banco/cadastro"/>">Banco</a></li>
+						<li><a href="<c:url value="/produto/cadastro"/>">Produto</a></li>
+						<li><a href="<c:url value="/tabela/cadastro"/>">Tabela</a></li>
+						<li><a href="<c:url value="/coeficiente/cadastro"/>">Coeficiente</a></li>
+					</ul>
+				</li>
 
 				<li><a href="buttons.html"><i class="icon icon-tint"></i> <span>Buttons &amp; icons</span></a></li>
 
