--- a/sgo/web/footer.jspf
+++ b/sgo/web/footer.jspf
@@ -1,6 +1,30 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn" %>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
+
+					<div class="row-fluid">
+						<div id="footer">
+							<c:set var="ip" value="<%=request.getRemoteAddr() %>"/>
+							<c:set var="ipParts" value="${fn:split(ip,'.')}" />
+							<input type="hidden" id="ip" name="ip " value ="${ipParts[3]}" />
+				
+							Em caso de dúvidas/problemas relacionados à TI envie email para <a href="mailto:suporte@grupoourocred.com.br">suporte@grupoourocred.com.br</a> informando o seguinte número:<b><c:out value="${ipParts[3]}"/></b><br/>
+				
+							<!-- 
+							Para dúvidas/problemas relacionados à TI envie email para <a href="mailto:suporte@grupoourocred.com.br">suporte@grupoourocred.com.br</a> 
+							ou então <a href="http://ourocred.zendesk.com/account/dropboxes/20092553" onClick="script: Zenbox.show(); return false;">clique aqui</a><br/>
+							-->
+				
+							Grupo Ouro Cred - 2013
+						</div>
+			
+					<input type="hidden" id="consultor" name="consultor " value ="${consultorInfo.consultor.nome }" />
+					<input type="hidden" id="tipo" name="tipo " value ="${consultorInfo.consultor.tipo }" />
+					<input type="hidden" id="supervisor" name="supervisor " value ="${consultorInfo.consultor.supervisor }" />
+					<input type="hidden" id="mail" name="mail " value ="${consultorInfo.mail }" />
+					</div>
+				</div>
+
 			</div>
 
 	</body>
