--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -89,13 +89,18 @@
 					</ul>
 
 				</li>
-				
+				<c:if test="${usuarioInfo.perfil.chave == 'ADMINISTRADOR' }">
 				<li class="submenu">
-
-					<a href="#"><i class="icon icon-pencil"></i> <span>Administrativo</span> <span class="label">4</span></a>
-
+					<a href="#"><i class="icon icon-pencil"></i> <span>Administrador</span> <span class="label">1</span></a>
 					<ul class="cadastro">
 						<li><a href="<c:url value="/workflow/cadastro"/>">Workflow</a></li>
+					</ul>
+				</li>
+				</c:if>
+
+				<li class="submenu">
+					<a href="#"><i class="icon icon-pencil"></i> <span>Administrativo</span> <span class="label">3</span></a>
+					<ul class="cadastro">
 						<li><a href="<c:url value="/banco/cadastro"/>">Banco</a></li>
 						<li><a href="<c:url value="/produto/cadastro"/>">Produto</a></li>
 						<li><a href="<c:url value="/tabela/cadastro"/>">Tabela</a></li>
@@ -108,7 +113,9 @@
 					<a href="#"><i class="icon icon-pencil"></i> <span>Consultores</span> <span class="label">1</span></a>
 
 					<ul class="consultor">
-						<li><a href="<c:url value="/formulario/cadastro"/>">Formulário</a></li>
+						<c:if test="${usuarioInfo.perfil.chave == 'Consultor' }">
+							<li><a href="<c:url value="/formulario/cadastro"/>">Formulário</a></li>
+						</c:if>
 						<li><a href="<c:url value="/hisconbeneficio/cadastro"/>">Hiscon</a></li>
 					</ul>
 
